clang/test/BSC/Negative/NullabilityCheck/if_stmt.cbs
// RUN: %clang_cc1 -verify %s

// dummy function to "manufacture" a pointer for assignment scenario
// simply pass a nullptr to it to confuse the compiler about
// its return value's nullability
_Safe int *_Borrow _Nullable ptr_factory(int *_Borrow _Nullable);

_Safe void test1(int *_Borrow _Nullable p) {
    if (p != nullptr) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_direct(int *_Borrow _Nullable p) {
    if (p) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_paren(int *_Borrow _Nullable p) {
    if ((p)) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_assignment(int *_Borrow _Nullable p) {
    if ((p = ptr_factory(nullptr))) {
        *p = 10; 
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_assignment_cmp(int *_Borrow _Nullable p) {
    if ((p = ptr_factory(nullptr)) != nullptr) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_null_assignment(int *_Borrow _Nullable p) {
    if ((p = nullptr)) {
        *p = 10; 
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}} 
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_null_assignment_cmp(int *_Borrow _Nullable p) {
    if ((p = nullptr) != nullptr) {
        *p = 10;  
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_null_assignment_cmp_inv(int *_Borrow _Nullable p) {
    if ((p = nullptr) == nullptr) {
        *p = 10; // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 20; 
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_comma(int *_Borrow _Nullable p, int x) {
    if (++x, p) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_comma_cmp(int *_Borrow _Nullable p, int x) {
    if (++x, p != nullptr) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_transitive_assign(int *_Borrow _Nullable p, int *_Borrow _Nullable q, int x) {
    if ((p = q = nullptr)) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_multi_comma(int *_Borrow _Nullable p, int x) {
    if (++x, ++x, p) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test1_multi_comma_cmp(int *_Borrow _Nullable p, int x) {
    if (++x, ++x, p != nullptr) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}


_Safe void test2(int *_Borrow _Nullable p) {
    int a = 10;
    if (p != nullptr) {
        *p = 10;
    } else {
        p = &_Mut a;
    }
    *p = 30;
}

_Safe void test3(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    if (p != nullptr && q != nullptr) {
        *p = 10;
        *q = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test4(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    int a = 10;
    int b = 10;
    if (p != nullptr && q != nullptr) {
        *p = 10;
        *q = 10;
    } else {
        p = &_Mut a;
        q = &_Mut b;
    }
    *p = 30;
    *q = 30;
}

_Safe void test5(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    if (p != nullptr || q != nullptr) {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test6(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    int a = 10;
    int b = 10;
    if (p != nullptr) {
        *p = 10;
        if (q != nullptr)
          *q = 10;
        else
          q = &_Mut b;
    } else {
        p = &_Mut a;
        if (q != nullptr)
          *q = 10;
        else
          q = &_Mut b;
    }
    *p = 30;
    *q = 30;
}

_Safe void test7(int *_Borrow _Nullable p, int *_Borrow _Nullable q, int *_Borrow _Nullable m) {
    int a = 10;
    int b = 10;
    int c = 10;
    if (p != nullptr && q != nullptr && m != nullptr) {
        *p = 10;
        *q = 10;
        *m = 10;
    } else {
        p = &_Mut a;
        q = &_Mut b;
        m = &_Mut c;
    }
    *p = 30;
    *q = 30;
    *m = 30;
}

_Safe void test8(int *_Borrow _Nullable p, int *_Borrow _Nullable q, int *_Borrow _Nullable m) {
    int a = 10;
    if (p != nullptr && q != nullptr && m != nullptr) {
        *p = 10;
        *q = 10;
        *m = 10;
    } else {
        *p = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
        *m = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *m = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test9(int *_Borrow _Nullable p, int *_Borrow _Nullable q, int *_Borrow _Nullable m) {
    int a = 10;
    if (p != nullptr || q != nullptr || m != nullptr) {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *m = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *m = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *m = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test10(int *_Borrow _Nullable p) {
    int a = 0;
    if (p != nullptr) {
        *p = 10;
        p = nullptr;
    } else {
        p = &_Mut a;
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test11(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    int a = 0;
    if (p != nullptr && q != nullptr || a > 0) {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test12(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    int a = 0;
    if (p != nullptr && q != nullptr && a > 0) {
        *p = 10;
        *q = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test13(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    int a = 0;
    int b = 0;
    if (p != nullptr && q != nullptr && a > 0) {
        *p = 10;
        *q = 10;
    } else {
        p = &_Mut a;
        q = &_Mut b;
    }
    *p = 30;
    *q = 30;
}

_Safe void test14(int *_Borrow _Nullable p) {
    if (p) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test15(int *_Borrow _Nullable p) {
    if (!p) {
        *p = 10; // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 20;
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test16(int *_Borrow _Nullable p, int *_Borrow _Nullable q) {
    if (p && q) {
        *p = 10;
        *q = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

struct S {
    int a;
};
_Safe void test17(struct S *_Borrow _Nullable p) {
    if (p != nullptr) {
        p->a = 10;
    } else {
        p->a = 20; // expected-error {{cannot access member through nullable pointer}}
    }
    p->a = 30;  // expected-error {{cannot access member through nullable pointer}}
}

_Safe void test18(void) {
    int *_Borrow _Nullable arr[3] = {nullptr, nullptr, nullptr};
	if (arr[0]) {
		*(arr[0]) = 1; // expected-error {{nullable pointer cannot be dereferenced}}
	}
}